--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,10 +11,13 @@ jobs:
     strategy:
       matrix:
         os:
-        - macos-13
-        - macos-14
-        - macos-15
-        - ubuntu-22.04
+          - macos-13
+          - macos-14
+          - macos-15
+          - ubuntu-20.04
+        include:
+          - os: ubuntu-20.04
+            openssl: true
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
@@ -27,6 +30,19 @@ jobs:
           path: ${{ steps.set-up-homebrew.outputs.gems-path }}
           key: ${{ matrix.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
           restore-keys: ${{ matrix.os }}-rubygems-
+
+      - name: Set up OpenSSL
+        if: matrix.openssl
+        run: |
+          sudo apt-get install pkg-config libssl-dev
+          brew install openssl@3
+          OPENSSL_DIR="$(brew --prefix openssl)"
+          {
+            echo "OPENSSL_DIR=$OPENSSL_DIR"
+            echo "OPENSSL_INCLUDE_DIR=$OPENSSL_DIR/include"
+            echo "OPENSSL_LIB_DIR=$OPENSSL_DIR/lib"
+            echo "PKG_CONFIG_PATH=${PKG_CONFIG_PATH:+:}$OPENSSL_DIR/lib/pkgconfig"
+          } >> "$GITHUB_ENV"
 
       - run: brew test-bot --only-cleanup-before
 
