--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,8 +29,6 @@ jobs:
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
 
-      - run: git -C "$(brew --repository homebrew/core)" status
-
       - name: Cache Homebrew Bundler RubyGems
         uses: actions/cache@v4
         with:
@@ -38,11 +36,10 @@ jobs:
           key: ${{ matrix.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
           restore-keys: ${{ matrix.os }}-rubygems-
 
-      - run: git -C "$(brew --repository homebrew/core)" status
-
       - run: brew test-bot --cleanup --only-cleanup-before
 
-      - run: git -C "$(brew --repository homebrew/core)" status
+      - run: git -C "$(brew --repository homebrew/core)" clean -df
+        continue-on-error: true
 
       - run: brew test-bot --only-setup
         if: ${{ ! matrix.tier2 }}
